--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,6 @@ description = "Library to interface with the Pterodactyl API"
 homepage = "https://github.com/Earthcomputer/pterodactyl_api"
 repository = "https://github.com/Earthcomputer/pterodactyl_api"
 
-[features]
-stream = ["reqwest/stream", "futures-core"]
-websocket = ["async-tungstenite", "futures-io", "futures-util"]
 
 [dev-dependencies]
 async-tungstenite = { version = "0.20", features = ["tokio-runtime", "tokio-native-tls"] }
@@ -18,11 +15,11 @@ tokio = { version = "1.26", features = ["macros"] }
 
 [dependencies]
 async-trait = "0.1"
-async-tungstenite = { version = "0.20", optional = true }
+async-tungstenite = { version = "0.20" }
 bytes = "1.4"
-futures-core = { version = "0.3", optional = true }
-futures-io = { version = "0.3", optional = true }
-futures-util = { version = "0.3", optional = true }
+futures-core = { version = "0.3" }
+futures-io = { version = "0.3" }
+futures-util = { version = "0.3"}
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["serde_derive"] }
 serde_json = "1.0"
@@ -30,4 +27,5 @@ thiserror = "1.0"
 time = { version = "0.3", features = ["parsing"] }
 urlencoding = "2.1"
 uuid = { version = "1.3", features = ["serde"] }
+tokio = { version = "1.26", features = ["macros"] }
 
